syntax = "proto3";

option go_package="go-grpc/microservices/order";

message CreatePaymentRequest {
  int64 user_id = 1;
  int64 order_id = 2;
  float total_price = 3;
}

message CreatePaymentResponse {
  int64 payment_id = 1;
}

service Payment {
  rpc Create(CreatePaymentRequest) returns (CreatePaymentResponse){}
}